<resources>
    <string name="app_name">通行码</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="base_next">下一步</string>

    <!--home main-->
    <string name="home_title">乘车码</string>
    <string name="home_my_wallet">我的钱包</string>
    <string name="home_route_plan">出行规划</string>
    <string name="home_bus">掌上公交</string>
    <string name="home_take_bus">扫码乘车</string>

    <string name="home_menu_my_card">我的特殊卡</string>
    <string name="home_menu_safe_setting">安全设置</string>
    <string name="home_menu_clear">清理缓存</string>
    <string name="home_menu_share">推荐给好友</string>
    <string name="home_menu_about">关于</string>
    <string name="home_menu_logout">退出登录</string>
    <string name="home_refresh">刷新</string>
    <string name="home_qr_tip1">扫描时请将二维码置于刷卡机正下方10厘米处</string>
    <string name="home_qr_tip2">每分钟自动刷新,连续使用请点击刷新二维码</string>
    <string name="home_qr_tip3">扫码须知</string>
    <string name="home_qr_tip4">1.扫描时请将二维码置于刷卡机正下方10厘米处。</string>
    <string name="home_qr_tip5">2.若带人乘车，请刷新二维码。</string>
    <string name="home_recharge">充值</string>
    <string name="home_message">消息</string>
    <string name="home_transition_name">photo</string>
    <string name="home_is_clear">是否清理缓存？</string>
    <string name="home_clear_success">清理成功</string>

    <string name="account_input_phone_num">请输入手机号</string>
    <string name="account_reset_phone_num">请输入注册的手机号</string>
    <string name="account_input_verification_code">请输入验证码</string>
    <string name="account_input_pw">请输入密码</string>
    <string name="account_input_new_pw">请输入新密码</string>
    <string name="account_login">登录</string>
    <string name="account_regist">注册</string>
    <string name="account_put">提交</string>
    <string name="account_send_vf_code">发送验证码</string>
    <string name="account_regist_new_user">注册新用户</string>
    <string name="account_forget_pw">忘记密码？</string>
    <string name="account_reset_pw">找回密码</string>
    <string name="account_regist_agreement">注册账号代表您已同意《通行码用户注册协议》</string>
    <string name="account_safe_setting">安全设置</string>
    <string name="account_safe_reset_pw">修改登录密码</string>
    <string name="account_safe_pay_safe">支付安全</string>
    <string name="account_safe_pay_safe_desc">设置后，在弹出支付二维码前需要先进行安全验证</string>
    <string name="account_safe_suggest">为保障您的账户资金安全，建议您至少设置一种安全验证方式</string>
    <string name="account_safe_bind_new_phone">绑定新手机</string>
    <string name="account_safe_phone_num">手机号码</string>
    <string name="account_safe_verification_code">验证码</string>
    <string name="account_safe_bing_new_phone_tips">更换成功后，请使用新手机号登录</string>
    <string name="account_safe_change_phone_num">更换手机号</string>
    <string name="account_safe_gesture_verification">手势验证</string>
    <string name="account_safe_show_gesture_path">显示手势轨迹</string>
    <string name="account_safe_change_gesture_setting">修改手势密码</string>
    <string name="account_safe_gestrure_tips">开启验证后，在弹出支付二维码页面之前，需要先进行安全验证。</string>

    <string name="gesture_forget_gesture">忘记手势密码</string>
    <string name="gesture_default">请输入手势密码</string>
    <string name="gesture_error">手势密码输入错误</string>
    <string name="gesture_correct">输入正确</string>
    <string name="gesture_create_activity">设置手势密码</string>
    <string name="gesture_create_gesture_default">绘制解锁图案</string>
    <string name="gesture_create_gesture_correct">再次绘制解锁图案</string>
    <string name="gesture_create_gesture_less_error">至少连接4个点，请重新输入</string>
    <string name="gesture_create_gesture_confirm_error">与上一次绘制不一致，请重新绘制</string>
    <string name="gesture_create_gesture_confirm_correct">设置成功</string>
    <string name="gesture_create_gesture_reset">重新设置</string>

    <string name="card_my_special_card">我的特殊卡</string>
    <string name="card_apply">申请特殊卡</string>
    <string name="card_none_tips">您还未申请特殊卡，点击按钮立即申请吧~</string>
    <string name="card_pay_insurance">支付保险费</string>
    <string name="card_apply_cancel">取消申请</string>
    <string name="card_real_name">实名卡</string>
    <string name="card_expiry_date">有效期：%1$s</string>

    <string name="payment_wallet_balance">乘车码余额(元)</string>
    <string name="payment_wallet_pre_pay_money">分段收费预付金额</string>
    <string name="payment_wallet_order_detail">明细</string>
    <string name="payment_wallet_check">查看</string>
    <string name="payment_wallet_recharge_confirm">充值%1$s</string>
    <string name="payment_wallet_coupon">优惠券</string>
    <string name="payment_wallet_pre_pay_tips">乘坐分段收费线路，上车扫码成功会预支付当前站至终点站区间的乘车费，在您扫码下车后退还差额，差额为预付费减实际乘车费。</string>
    <string name="payment_wallet_numpass_count">计次票</string>
    <string name="payment_wallet_my_numpass_count">我的计次票</string>
    <string name="payment_wallet_my_numpass_month">我的计次月票</string>
    <string name="payment_wallet_my_numpass_season">我的计次季票</string>
    <string name="payment_wallet_my_numpass_year">我的计次年票</string>
    <string name="payment_wallet_purchase">购买</string>
    <string name="payment_unit_yuan">元</string>


    <string name="about_version_update">版本更新</string>
    <string name="about_title">关于</string>
    <string name="about_version_real">已经是最新版本</string>
    <string name="about_advise_reply">意见反馈</string>
    <string name="about_service_phone">客服电话</string>
    <string name="about_introduction">简介</string>
    <string name="about_office_site">官网</string>
    <string name="about_service_rule">服务条款</string>
    <string name="about_copyright">长沙银行股份有限公司\n珠海两码事信息技术有限公司\n长沙交通投资控股集团有限公司\nCopyright © 2016-2017 txmpay.com. All Rights Reserved.</string>
    <string name="about_copyright2">版权所有</string>
    <string name="about_advice_tip">请您输入遇到的问题或建议...</string>
    <string name="about_contact_phone">联系电话</string>
    <string name="about_leave_phone">请输入联系电话</string>

    <string name="personal_info_avatar">头像</string>
    <string name="personal_info_photo">照片</string>
    <string name="personal_info_name">姓名</string>
    <string name="personal_info_nick_name">昵称</string>
    <string name="personal_info_">性别</string>
    <string name="personal_info_male">男</string>
    <string name="personal_info_female">女</string>
    <string name="personal_info_name_edit">编辑姓名</string>
    <string name="personal_info_edit">编辑</string>
    <string name="personal_info_gender_edit">编辑性别</string>
    <string name="personal_info_person_info">个人信息</string>


    <string name="payment_pay_way">选择支付方式</string>
    <string name="title_activity_data_base_test">DataBaseTestActivity</string>
</resources>
