<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/appbar_layout"></include>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <com.txmpay.ewallet.widget.ArcView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:arcHeight="80dp"
            app:bgColor="@color/colorPrimary"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space30"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/balanceTipTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/font18"
                android:text="@string/payment_wallet_balance" />

            <TextView
                android:id="@+id/balanceTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/balanceTipTxt"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/font28" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/recharge_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/space20"
            android:paddingRight="@dimen/space20"
            android:paddingTop="@dimen/space05"
            android:paddingBottom="@dimen/space05"
            android:layout_marginBottom="26dp"
            android:background="@drawable/shape_bg_white_recharge"
            android:gravity="center"
            android:layout_gravity="center_horizontal|bottom">

            <ImageView
                android:layout_width="@dimen/space22"
                android:layout_height="@dimen/space22"
                android:src="@drawable/home_icon_yuan"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space08"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font16"
                android:text="@string/home_recharge"/>

        </LinearLayout>

    </FrameLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/frozenBalanceImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/payment_icon_pre_pay"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/frozenBalanceTipTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/frozenBalanceImg"
            android:layout_marginLeft="@dimen/space08"
            android:text="@string/payment_wallet_pre_pay_money" />

        <TextView
            android:id="@+id/frozenBalanceTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/frozenBalanceTipTxt"
            android:layout_alignStart="@id/frozenBalanceTipTxt"
            android:textColor="@color/textDefualt3"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/lookFrozenTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_theme_small_btn"
            android:clickable="true"
            android:paddingBottom="@dimen/space04"
            android:paddingTop="@dimen/space04"
            android:paddingLeft="@dimen/space20"
            android:paddingRight="@dimen/space20"
            android:text="@string/payment_wallet_check"
            android:textColor="@color/white" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/couponImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/payment_icon_coupon"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/couponText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/couponImg"
            android:layout_marginLeft="@dimen/space08"
            android:text="@string/payment_wallet_coupon" />

        <TextView
            android:id="@+id/couponNumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/couponText"
            android:layout_alignStart="@id/couponText"
            android:textColor="@color/textDefualt3"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/lookCouponTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_theme_small_btn"
            android:clickable="true"
            android:paddingBottom="@dimen/space04"
            android:paddingTop="@dimen/space04"
            android:paddingLeft="@dimen/space20"
            android:paddingRight="@dimen/space20"
            android:text="@string/payment_wallet_check"
            android:textColor="@color/white" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textDefualt2"
        android:textSize="@dimen/font12"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/payment_wallet_pre_pay_tips"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/selector_item_background"
        android:orientation="horizontal"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/numpassTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:text="@string/payment_wallet_numpass_count" />

        <TextView
            android:id="@+id/buyNumpassTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_theme_small_btn"
            android:clickable="true"
            android:padding="@dimen/space08"
            android:text="@string/payment_wallet_purchase"
            android:textColor="@color/white" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/numPassRecycler"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin">
    </android.support.v7.widget.RecyclerView>
</LinearLayout>